<resources>
    <string name="app_name" translatable="false">EduVenture</string>
    <string name="entrance">Вход</string>
    <string name="mail">Почта</string>
    <string name="mail_placeholder" translatable="false">example@mail.com</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="dont_have_account">У вас нету акаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="username" translatable="false">Username</string>
    <string name="phone_number">Номер телефона</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="news">Новости</string>
    <string name="language">Русский</string>
    <string name="universities">Университеты и Гранты</string>
    <string name="internship">Стажировки</string>
    <string name="save">Сохранить</string>
    <string name="read">Читать</string>
    <string name="search">Поиск...</string>
    <string name="retry">Снова</string>
    <string name="loading">Загрузка</string>
    <string name="loading_failed">Не удалось загрузить</string>
    <string name="register_continue">Продолжить</string>
    <string name="enter_verify_code">Введите код подтверждения</string>
    <string name="email_sent_code">На адрес был отправлен 4-значный код</string>
    <string name="send_code_again">Отправить код еще раз</string>
    <string name="enter_email">Напишите свой адрес электронной почты</string>
    <string name="create_new_password">Придумайте новый пароль</string>
    <string name="confirm_password">Подтвердите Пароль</string>
</resources>