...
                fontWeight = FontWeight.Bold,
                color = Color.Black
            )

            Spacer(modifier = Modifier.height(22.dp))

            //Password
            Text(
                text = stringResource(id = R.string.password),
                fontFamily = INTER_FONT_FAMILY,
                fontSize = 12.sp,
                fontWeight = FontWeight.Bold
            )
...
